# instabids-agent-platform

./: .env.template  .gitignore  README.md  pyproject.toml
.adk/: components.json
.prompts/system/: adk_specialist.md  debugging_agent.md  master_code_builder.md  refactoring_agent.md  supabase_integration.md
docs/: ADK_BEST_PRACTICES.md  COMMON_PITFALLS.md  PROJECT_ARCHITECTURE.md  README_FOR_AI_CODERS.md  SUPABASE_PATTERNS.md
